@@ -1,3 +1,4 @@
 #!/bin/bash
+export MAVEN_OPTS="-Xmx512m -XX:MaxPermSize=128m"
 mvn -Pintegration verify > mvn.out 2>&1
 
